# dotfiles

./: .gitignore  .gitmodules  README.md  darwin-configuration.nix  nethackrc  nix.fish  zshrc
fish/: config.fish  fish_plugins  fishfile  nix.fish
fish/functions/: fish_prompt.fish  fish_vim_key_bindings.fish
home-manager/: flake.nix  home.nix
hypr/: hypridle.conf  hyprland.conf  hyprlock.conf  hyprsunset.conf
hypr/scripts/: lidclosed  lidstartup
i3/: config
nixos/: config.nix  flake.nix  hardware-configuration.nix
nvim/: init.vim  lazy-lock.json  my-nvim-hs.cabal  nvim.hs  nvimrc  stack.yaml
nvim/UltiSnips/: bib.snippets  c.snippets  cpp.snippets  haskell.snippets  html.snippets  vhdl.snippets
nvim/after/plugin/: lsp-config.lua  lsp.lua  telescope.lua  treesitter.lua
nvim/ftplugin/: elm.vim  fsharp.vim  haskell.lua  haskell.vim  purescript.vim
nvim/lib/Neovim/Example/: Plugin.hs
nvim/lib/Neovim/Example/Plugin/: Fibonacci.hs  Random.hs
nvim/lua/: cmp-config.lua  color.lua  config.lua  lsp-config.lua  packages.lua  plugins.lua
nvim/plugin/: packer_compiled.lua
nvim/rplugin/python/: snake.py
nvim/syntax/: ld.vim
waybar/: config  style.css
zshcustom/: vim.zsh
