name:                my-nvim-hs
version:             0.1.0.0
synopsis:            Haskell Neovim plugins
description:         Personal project to manage plugin dependencies.
-- Take a license that you like. Only relevant if you want to make your config
-- used by other people.
--license:             BSD3
--license-file:        LICENSE
author:              Author name here
--maintainer:          example@example.com
copyright:           2017 Author name here
category:            Neovim
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

executable my-nvim-hs
  main-is:             nvim.hs
  hs-source-dirs:      ., lib
  other-modules:       Neovim.Example.Plugin
                     , Neovim.Example.Plugin.Fibonacci
                     , Neovim.Example.Plugin.Random
  build-depends:       base >= 4.7 && < 5
                     , nvim-hs >= 0.2.0 && < 1.0.0
                     , nvim-hs-ghcid
                     -- The dependency below is only needed for the example plugin
                     , random
  default-language:    Haskell2010
